Fix top bar alignment

--- a/site/style.scss
+++ b/site/style.scss
@@ -29,6 +29,9 @@ body {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    height: 4em;
+    margin: 0px 0px 12px 0px;
+    padding: 4px;
   }
 
   .title-bar {
